--- a/css/index.css
+++ b/css/index.css
@@ -761,8 +761,8 @@ img{
     text-align: center;
 }
 .project_bg{
-    background-color: var(--first-color-second);
     padding-top: 3rem;
+    background-color: var(--first-color-second);
 }
 .project_tittle{
     font-size: var(--h2-font-size);
@@ -872,7 +872,7 @@ img{
     row-gap: 3.5rem;
 }
 .footer_bg{
-    background-color: var(--first-color-second);
+    background-color: var(--first-color);
     padding: 2rem 0 3rem;
 }
 .footer_tittle{
